# kidletime

./: CMakeLists.txt
src/plugins/wayland/: CMakeLists.txt  poller.cpp
